dark mode bug

--- a/white.css
+++ b/white.css
@@ -22,6 +22,7 @@ body {
     border: 8px solid #1a1a40;
     height: 70vh;
     width:100%;
+    
 
 }
 .options{
@@ -104,4 +105,20 @@ input[type="color"]::-moz-color-swatch {
     color: #333;
     transition: all 0.3s ease;
 }
+  .darkmode #paintarea {
+    background: #121212;
+    border-color: #ffffff;
+  }
+
+  .darkmode #paint {
+    background: #222; 
+  }
+
+  #toggle-darkmode {
+    margin-bottom: 10px;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;}
+    
 
